--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "repository": "https://github.com/Code-Institute/angular-routing.git",
   "license": "MIT",
   "devDependencies": { 
-    "http-server": "^0.6.1",
+    "http-server": "^0.9.0",
     "shelljs": "^0.2.6"
   },
   "scripts": {
     "prestart": "npm install",
-    "start": "node node_modules/.bin/http-server -a localhost -p 8000 -c-1"
+    "start": "node node_modules/http-server/bin/http-server -a localhost -p 8000 -c-1"
   }
 }
